--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
-    "nebulas": "^0.5.6"
+    "nebulas": "^0.5.6",
+    "sleep": "^6.1.0"
   }
 }
