--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "node-monitor": "babel-node nodeMonitor.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
+    "colors": "^1.4.0",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "nebulas": "^0.5.6",
     "sleep": "^6.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^7.1.0"
   }
 }
