--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "monitor": "babel-node monitor.js",
     "mint": "babel-node mint.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "naxone": "babel-node naxone.js"
   },
   "author": "",
   "license": "ISC",
