--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "build-mint": "babel src/mint.js --out-file script/mint.js",
     "build-naxone": "babel src/naxone.js --out-file script/naxone.js",
     "build-vote": "babel src/vote.js --out-file script/vote.js",
+    "build-govern": "babel src/govern.js --out-file script/govern.js",
     "monitor": "npm run build-monitor && node script/monitor.js",
     "mint": "npm run build-mint &&node script/mint.js",
     "naxone": "npm run build-naxone &&node script/naxone.js",
-    "vote": "npm run build-vote &&node script/vote.js"
+    "vote": "npm run build-vote &&node script/vote.js",
+    "govern": "npm run build-govern &&node script/govern.js"
   },
   "author": "",
   "license": "ISC",
